@@ -13,4 +13,4 @@
   <p><%= f.submit "Change my password" %></p>
 <% end %>
 
-<%= render :partial => "shared/devise_links" %>
+<%= render :partial => "devise/shared/devise_links" %>
