@@ -9,4 +9,4 @@
   <p><%= f.submit "Send me reset password instructions" %></p>
 <% end %>
 
-<%= render :partial => "shared/devise_links" %>
+<%= render :partial => "devise/shared/devise_links" %>
