@@ -22,4 +22,4 @@
 
 <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
 
-<%= render :partial => "shared/devise_links" %>
+<%= link_to "Back", :back %>
