@@ -14,4 +14,4 @@
   <p><%= f.submit "Sign in" %></p>
 <% end -%>
 
-<%= render :partial => "shared/devise_links" %>
+<%= render :partial => "devise/shared/devise_links" %>
