@@ -1,6 +1,12 @@
 == 1.1.0
 
-* Rails 3 compatibility
+* enhancements
+  * Rails 3 compatibility.
+  * All controllers and views are namespaced, for example: Devise::SessionsController and "devise/sessions".
+
+* deprecations
+  * Rails 3 compatible only.
+  * The scoped views are no longer "sessions/users/new". Now use "users/sessions/new".
 
 == 1.0.1
 
